# NESO-fame

./: .gitignore  .readthedocs.yaml  README.md  example_conformal.py  example_mesh.py  pyproject.toml  requirements-dev.txt  requirements-dev.txt.in  setup.py  test_mesh.py
.github/workflows/: docs.yml  linting.yml  test.yml
docs/: requirements.txt
docs/source/: accuracy.rst  api.rst  conf.py  index.rst  installation.rst  simple.rst  tokamak.rst  usage.rst  visualisation.rst
docs/source/_static/: custom.css
docs/source/api/: coordinates.rst  fields.rst  generators.rst  hypnotoad.rst  index.rst  mesh.rst  nektar_writer.rst  offset.rst  wall.rst
fame/: mesh_builder.py
neso_fame/: __init__.py  approx_coord_comparisons.py  coordinates.py  edge_filter.py  element_builder.py  fields.py  generate_mesh.py  generators.py  hypnotoad.py  hypnotoad_interface.py  mesh.py  mesh_builder.py  meshio_writer.py  nektar_writer.py  offset.py  scripts.py  vtk_writer.py  wall.py
tests/: conftest.py  mesh_strategies.py  test_coordinates.py  test_edge_filter.py  test_element_builder.py  test_generators.py  test_hypnotoad.py  test_mesh.py  test_meshio_writer.py  test_nektar_writer.py  test_scripts.py  test_wall.py
typings/NekPy/: LibUtilities.py  LibUtilities.pyi  SpatialDomains.pyi
