[build-system]
requires = ["setuptools>=42", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "neso_fame"
authors = [{name = "Crown Copyright"}]
maintainers = [{name = "Chris MacMackin", email = "chris.macmackin@ukaea.uk"}]
description = "Field-aligned mesh extrusion for the NEPTUNE project"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["mesh", "plasma", "physics"]
license = {text = "GNU Lesser General Public License v3 or later (LGPLv3+)"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy",
    "scipy",
    "hypnotoad",
    "NekPy",
    "click",
    "meshpy",
]
dynamic = ["version"]

[tool.setuptools]
packages = ["neso_fame"]

[tools.setuptools.package-data]
neso_fame = ["py.typed"]

[project.urls]
"Bug Tracker" = "https://github.com/ExCALIBUR-NEPTUNE/NESO-fame/issues/"
"Source Code" = "https://github.com/ExCALIBUR-NEPTUNE/NESO-fame"

[project.scripts]
fame-simple = "neso_fame.scripts:simple"
fame-hypnotoad = "neso_fame.scripts:hypnotoad"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
mypy_path = ["./typings"]
packages = ["neso_fame", "tests"]

[[tool.mypy.overrides]]
module = ["scipy.*"]
ignore_missing_imports = true

[tool.isort]
profile = "black"

[tool.coverage.run]
source = ["neso_fame/", ]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:`rtol` is too low:UserWarning",  # Hypnotoad sets rtol=0 when calling ivp_solve
]

[tool.ruff]
target-version = "py310"
extend-select = ["I", "C", "NPY", "D", "A", "ANN"]
ignore = ["ANN101", "ANN102", "ANN401", "D206"]

[tool.ruff.per-file-ignores]
"tests/*" = ["D"]
"typings/*" = ["D", "A"]
"docs/source/conf.py" = ["D", "ANN", "A"]

[tool.ruff.pydocstyle]
convention = "numpy"